perf(query): optimize ChequeraSerie queries and enhance logging
This update improves query performance and logging:

- perf(repository): optimize ChequeraSerie queries
  * Refactor findFirst method to use dynamic Sort
  * Add secondary sorting by chequeraSerieId
  * Improve query readability
  * Enhance query performance
  * Implement flexible sorting

- feat(logging): enhance debug information
  * Add ChequeraSerie logging in critical operations
  * Improve debug messages
  * Standardize log format
  * Add query result logging
  * Enhance operation tracking

- refactor(service): improve code structure
  * Enhance method readability
  * Optimize stream operations
  * Improve error handling
  * Add method documentation
  * Standardize naming conventions

BREAKING CHANGES:
- Repository method signature changed
- Query sorting behavior modified
- Logging structure updated

Performance Improvements:
- More efficient queries
- Better sorting flexibility
- Enhanced logging
- Improved traceability
- Better debugging support

Closes #97